feat: new layout for submissions, processing, new-model

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -7,6 +7,7 @@
   --color-plum: #50285a;
   --color-plum-hover: #6f3b73;
   --color-mint: #bee6b4;
+  --color-ersilia: #f5f4f6;
 }
 
 @theme inline {
